FEAT:(NONE) siba thymeleaf 외않되
FEAT:(NONE) login.html 위치 임시 수정

FEAT:(NONE) authentication 추가

refactor: 코드 리뷰 피드백 반영

feat: user dto 추가

feat: user 생성까지 테스트

feat: token 발급 테스트 코드 추가

feat: 토큰 발급 까지

feat: refresh token 검증

feat: authentication 필터 보완, 토큰 인증 방식 완료, 토큰 재발급 완료

feat: image 업로드 포인트 제작중 (with imageKit)

feat: image config

chore: ignore 추가

feat: image kit 연동

feat: image upload 함수 트러블;

--- a/app/src/main/resources/application-local.yml
+++ b/app/src/main/resources/application-local.yml
@@ -7,3 +7,12 @@ spring:
   web:
     resources:
       static-locations: file:src/main/resources/static/
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+imagekit:
+  private-key: ${IMAGE_PRIVATE_KEY}
+  authentication-endpoint: https://api.imagekit.io/v1/auth
+  public-key: ${IMAGE_PUBLIC_KEY}
+  url-endpoint: https://ik.imagekit.io/ktest92
