--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,8 +4,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-../.idea
 
+.idea
+../.idea
 ### STS ###
 .apt_generated
 .classpath
