--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+    implementation 'com.github.imagekit-developer:imagekit-java:2.0.0'
 }
 
 idea {
