feat: 이벤트 관리 초기형 생성 & 조회 추가 (유저 도메인 연동 필요)

--- a/app/src/main/resources/.env.example
+++ b/app/src/main/resources/.env.example
@@ -5,6 +5,7 @@ APP_DB_PORT=3306
 APP_DB_SCHEMA=schema
 APP_DB_USERNAME=username
 APP_DB_PASSWORD=password
+APP_MONGO_DB_URI=mongodb+srv://username:password@cluster.mongodb.net/promotion_builder
 APP_SECURITY_USERNAME=username
 APP_SECURITY_PASSWORD={noop}password
 APP_JWT_SECRET=secret
