feat: 이벤트 관리 서비스 총관리자 전용 마스터 권한 추가

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -69,3 +69,4 @@ app:
   security:
     jwt-secret: ${APP_JWT_SECRET}
     jwt-token-duration-seconds: ${APP_JWT_TOKEN_DURATION_SECONDS}
+    master-api-key: ${APP_MASTER_API_KEY}
