--- a/app/src/main/resources/.env.example
+++ b/app/src/main/resources/.env.example
@@ -10,3 +10,4 @@ APP_SECURITY_USERNAME=username
 APP_SECURITY_PASSWORD={noop}password
 APP_JWT_SECRET=secret
 APP_JWT_TOKEN_DURATION_SECONDS=86400
+APP_MASTER_API_KEY=31752dbc600386b6cab71c76c8e6229f
