feat: 이벤트 제공 서비스 이벤트 상세 js 생성 기초 구현

--- a/display/src/main/resources/.env.example
+++ b/display/src/main/resources/.env.example
@@ -1,12 +1,9 @@
 # Copy this file to .env and fill in your values
 
-APP_DB_HOSTNAME=localhost
-APP_DB_PORT=3306
-APP_DB_SCHEMA=schema
-APP_DB_USERNAME=username
-APP_DB_PASSWORD=password
 APP_MONGO_DB_URI=mongodb+srv://username:password@cluster.mongodb.net/promotion_builder
 APP_SECURITY_USERNAME=username
 APP_SECURITY_PASSWORD={noop}password
 APP_JWT_SECRET=secret
 APP_JWT_TOKEN_DURATION_SECONDS=86400
+APP_MASTER_API_KEY=31752dbc600386b6cab71c76c8e6229f
+APP_MAIN_API_HOST=http://localhost:8080
