--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'idea'
     id 'jacoco'
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
@@ -56,6 +57,13 @@ dependencies {
     annotationProcessor 'org.jetbrains:annotations:24.1.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
 
 tasks.named('test') {
