--- a/display/build.gradle
+++ b/display/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     ext {
-        queryDslVersion = '5.0.0'
         jjwtVersion = '0.11.5'
     }
 }
 
 plugins {
     id 'java'
+    id 'idea'
     id 'jacoco'
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
@@ -29,8 +29,6 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -38,24 +36,24 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
     implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
     implementation 'me.paulschwarz:spring-dotenv:3.0.0'
-    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
     implementation 'net.datafaker:datafaker:1.8.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
-    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     annotationProcessor 'org.jetbrains:annotations:24.1.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
 
 tasks.named('test') {
@@ -95,17 +93,5 @@ jacocoTestReport {
         html.enabled true
         csv.enabled true
         xml.enabled true
-    }
-
-    def exclude = ["**/PromotionDisplayApplication.class", "**/*Config.class"]
-
-    for (qPattern in "**/QA".."**/QZ") {
-        exclude.add(qPattern + "*")
-    }
-
-    afterEvaluate {
-        classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: exclude)
-        }))
     }
 }
