--- a/display/build.gradle
+++ b/display/build.gradle
@@ -10,6 +10,7 @@ plugins {
     id 'jacoco'
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'com.adarshr.test-logger' version '4.0.0'
 }
 
 group = 'kr.njw'
