feat: 이벤트 상세 조회시 Redis 캐싱 추가

--- a/display/src/main/resources/.env.example
+++ b/display/src/main/resources/.env.example
@@ -1,6 +1,7 @@
 # Copy this file to .env and fill in your values
 
 APP_MONGO_DB_URI=mongodb+srv://username:password@cluster.mongodb.net/promotion_builder
+APP_REDIS_URL=redis://default:password@redis.ec2.cloud.redislabs.com:17356
 APP_SECURITY_USERNAME=username
 APP_SECURITY_PASSWORD={noop}password
 APP_JWT_SECRET=secret
