--- a/.github/workflows/deploy-builder.yml
+++ b/.github/workflows/deploy-builder.yml
@@ -39,7 +39,8 @@ jobs:
           images: |
             ${{ steps.login-ecr.outputs.registry }}/promotion-builder
           tags: |
-            type=raw,value=latest
+            type=raw,priority=200,value=latest
+            type=raw,priority=100,value=sha-${{ github.sha }}
 
       - name: Build, tag, and push image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -56,7 +57,7 @@ jobs:
         uses: awslabs/amazon-app-runner-deploy@main
         with:
           service: promotion-builder
-          image: ${{ steps.login-ecr.outputs.registry }}/promotion-builder:latest
+          image: ${{ steps.login-ecr.outputs.registry }}/promotion-builder:sha-${{ github.sha }}
           access-role-arn: arn:aws:iam::440110353195:role/service-role/AppRunnerECRAccessRole
           region: ap-northeast-1
           cpu: 1
