--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -70,3 +70,4 @@ app:
     jwt-secret: ${APP_JWT_SECRET}
     jwt-token-duration-seconds: ${APP_JWT_TOKEN_DURATION_SECONDS}
     master-api-key: ${APP_MASTER_API_KEY}
+    jwt-refresh-token-duration-seconds: ${APP_JWT_REFRESH_TOKEN_DURATION_SECONDS}
