feat: 이벤트 참여 서비스 Amazon SQS 리스너 연동

--- a/event-host/src/main/resources/.env.example
+++ b/event-host/src/main/resources/.env.example
@@ -8,3 +8,7 @@ APP_JWT_SECRET=secret
 APP_JWT_TOKEN_DURATION_SECONDS=86400
 APP_MASTER_API_KEY=31752dbc600386b6cab71c76c8e6229f
 APP_MAIN_API_HOST=http://localhost:8080
+APP_AWS_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
+APP_AWS_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+APP_SQS_REGION=ap-northeast-1
+APP_SQS_EVENT_QUEUE_NAME=promotion-event-host_event
