feat: 이벤트 수정시 Amazon SNS로 노티 전송

--- a/app/src/main/resources/.env.example
+++ b/app/src/main/resources/.env.example
@@ -11,3 +11,7 @@ APP_SECURITY_PASSWORD={noop}password
 APP_JWT_SECRET=secret
 APP_JWT_TOKEN_DURATION_SECONDS=86400
 APP_MASTER_API_KEY=31752dbc600386b6cab71c76c8e6229f
+APP_AWS_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
+APP_AWS_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+APP_SNS_REGION=ap-northeast-1
+APP_SNS_EVENT_TOPIC_NAME=promotion-builder_event
