--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'me.paulschwarz:spring-dotenv:3.0.0'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
     implementation 'net.datafaker:datafaker:1.8.1'
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
@@ -58,10 +59,9 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     annotationProcessor 'org.jetbrains:annotations:24.1.0'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 }
 
 idea {
@@ -87,16 +87,12 @@ tasks.named('jar') {
 def generated = 'src/main/generated'
 
 tasks.withType(JavaCompile) {
-    options.getGeneratedSourceOutputDirectory().set(file(generated))
+    options.generatedSourceOutputDirectory = file(generated)
     options.compilerArgs << '-parameters'
 }
 
-sourceSets {
-    main.java.srcDirs += [generated]
-}
-
-clean {
-    delete file(generated)
+clean.doLast {
+    file(generated).deleteDir()
 }
 
 jacoco {
