--- a/app/src/main/resources/.env.example
+++ b/app/src/main/resources/.env.example
@@ -16,3 +16,4 @@ APP_AWS_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
 APP_AWS_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 APP_SNS_REGION=ap-northeast-1
 APP_SNS_EVENT_TOPIC_NAME=promotion-builder_event
+APP_SENTRY_DSN=https://dsn.ingest.sentry.io/123456789
