chore: 깃허브 액션 빌드시 SENTRY_AUTH_TOKEN 설정

--- a/.github/workflows/deploy-builder.yml
+++ b/.github/workflows/deploy-builder.yml
@@ -46,6 +46,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: app
+          build-args: |
+            "SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
