--- a/event-host/Dockerfile
+++ b/event-host/Dockerfile
@@ -1,5 +1,7 @@
 FROM bellsoft/liberica-openjdk-alpine:17 AS builder
 WORKDIR /gradle
+ARG SENTRY_AUTH_TOKEN
+ENV SENTRY_AUTH_TOKEN ${SENTRY_AUTH_TOKEN}
 COPY gradlew build.gradle settings.gradle ./
 COPY gradle/ gradle/
 RUN ./gradlew build -x test --parallel --continue 2> /dev/null || true
