feat: 유저 정보 변경시 Amazon SNS로 노티

--- a/app/src/main/resources/.env.example
+++ b/app/src/main/resources/.env.example
@@ -16,4 +16,5 @@ APP_AWS_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
 APP_AWS_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 APP_SNS_REGION=ap-northeast-1
 APP_SNS_EVENT_TOPIC_NAME=promotion-builder_event
+APP_SNS_USER_TOPIC_NAME=promotion-builder_user
 APP_SENTRY_DSN=https://dsn.ingest.sentry.io/123456789
