feat: 유저 정보 변경 Amazon SQS 리스너 연동

--- a/event-host/src/main/resources/.env.example
+++ b/event-host/src/main/resources/.env.example
@@ -12,3 +12,4 @@ APP_AWS_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
 APP_AWS_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 APP_SQS_REGION=ap-northeast-1
 APP_SQS_EVENT_QUEUE_NAME=promotion-event-host_event
+APP_SQS_USER_QUEUE_NAME=promotion-event-host_user
