--- a/display/src/main/resources/application.yml
+++ b/display/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
       max-request-size: 20MB
   thymeleaf:
     cache: false
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
 
 server:
   address: 0.0.0.0
@@ -29,6 +31,7 @@ server:
   tomcat:
     max-http-form-post-size: -1
     max-swallow-size: -1
+  shutdown: graceful
 
 management:
   endpoints:
